--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNptwkufvVSkpwcSKDLMl5c",
+      "authorship_tag": "ABX9TyOcvvAkVMQRiKfRg86z/15Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,19 @@
         "if not os.path.exists(data_dir):\n",
         "    os.makedirs(data_dir)\n",
         "\n",
-        "\n"
+        "# Process each uploaded file\n",
+        "for file_name in uploaded.keys():\n",
+        "    print(f'Uploaded file: {file_name}')\n",
+        "    if file_name.endswith('.zip'):\n",
+        "        # If the file is a zip file, extract its contents\n",
+        "        with zipfile.ZipFile(io.BytesIO(uploaded[file_name]), 'r') as zip_ref:\n",
+        "            zip_ref.extractall(data_dir)\n",
+        "        print(f'Extracted {file_name} into the \"{data_dir}\" folder.')\n",
+        "    else:\n",
+        "        # If it's not a zip file, save it directly into the data directory\n",
+        "        with open(os.path.join(data_dir, file_name), 'wb') as f:\n",
+        "            f.write(uploaded[file_name])\n",
+        "        print(f'Saved {file_name} into the \"{data_dir}\" folder.')\n"
       ],
       "metadata": {
         "id": "tTmi9oXAF9qo"
