--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcvvAkVMQRiKfRg86z/15Q",
+      "authorship_tag": "ABX9TyOy+2hp2403mSvpVRfbH1pB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#@title Simple Image Restoration (Denoising) Autoencoder in Google Colab\n",
+        "\n",
+        "# 1. Import Libraries\n",
+        "import os\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D\n",
+        "from tensorflow.keras.models import Model\n",
+        "from google.colab import files\n",
+        "from zipfile import ZipFile\n",
+        "\n",
+        "# 2. Upload and Extract Your Dataset\n",
+        "# If you have a zip file containing your images, run the following cell to upload and extract.\n",
+        "# (Uncomment and run if needed.)\n",
+        "# uploaded = files.upload()\n",
+        "# for filename in uploaded.keys():\n",
+        "#     if filename.endswith('.zip'):\n",
+        "#         with ZipFile(filename, 'r') as zip_ref:\n",
+        "#             zip_ref.extractall(\"data\")\n",
+        "#         print(f'Extracted {filename} to \"data\" folder')"
+      ],
       "metadata": {
         "id": "Sb6gaxZDGDiz"
       },
