--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy+2hp2403mSvpVRfbH1pB",
+      "authorship_tag": "ABX9TyNJ8QktcG7gA0dwLLCVT/5B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,67 +29,27 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import files\n",
-        "import zipfile\n",
-        "import io\n",
-        "import os\n",
-        "\n",
-        "# Upload file(s)\n",
-        "uploaded = files.upload()\n",
-        "\n",
-        "# Create a directory to store the data\n",
-        "data_dir = 'data'\n",
-        "if not os.path.exists(data_dir):\n",
-        "    os.makedirs(data_dir)\n",
-        "\n",
-        "# Process each uploaded file\n",
-        "for file_name in uploaded.keys():\n",
-        "    print(f'Uploaded file: {file_name}')\n",
-        "    if file_name.endswith('.zip'):\n",
-        "        # If the file is a zip file, extract its contents\n",
-        "        with zipfile.ZipFile(io.BytesIO(uploaded[file_name]), 'r') as zip_ref:\n",
-        "            zip_ref.extractall(data_dir)\n",
-        "        print(f'Extracted {file_name} into the \"{data_dir}\" folder.')\n",
-        "    else:\n",
-        "        # If it's not a zip file, save it directly into the data directory\n",
-        "        with open(os.path.join(data_dir, file_name), 'wb') as f:\n",
-        "            f.write(uploaded[file_name])\n",
-        "        print(f'Saved {file_name} into the \"{data_dir}\" folder.')\n"
-      ],
-      "metadata": {
-        "id": "tTmi9oXAF9qo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Simple Image Restoration (Denoising) Autoencoder in Google Colab\n",
-        "\n",
-        "# 1. Import Libraries\n",
-        "import os\n",
-        "import numpy as np\n",
         "import cv2\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D\n",
-        "from tensorflow.keras.models import Model\n",
-        "from google.colab import files\n",
-        "from zipfile import ZipFile\n",
+        "import os\n",
         "\n",
-        "# 2. Upload and Extract Your Dataset\n",
-        "# If you have a zip file containing your images, run the following cell to upload and extract.\n",
-        "# (Uncomment and run if needed.)\n",
-        "# uploaded = files.upload()\n",
-        "# for filename in uploaded.keys():\n",
-        "#     if filename.endswith('.zip'):\n",
-        "#         with ZipFile(filename, 'r') as zip_ref:\n",
-        "#             zip_ref.extractall(\"data\")\n",
-        "#         print(f'Extracted {filename} to \"data\" folder')"
+        "# ✅ Verify the manually uploaded image path\n",
+        "file_path = \"/content/baby.png\"  # Change the filename if different\n",
+        "\n",
+        "# ✅ Check if the file exists\n",
+        "if os.path.exists(file_path):\n",
+        "    print(\"File found:\", file_path)\n",
+        "\n",
+        "    # Load and preprocess the image\n",
+        "    img = cv2.imread(file_path)\n",
+        "\n",
+        "    if img is not None:\n",
+        "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "        img = cv2.resize(img, (128, 128))  # Resize to match the model input shape"
       ],
       "metadata": {
-        "id": "Sb6gaxZDGDiz"
+        "id": "_CeKMvrNK4L_"
       },
       "execution_count": null,
       "outputs": []
