--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOm3qetWgOUqJvVOct1wKkD",
+      "authorship_tag": "ABX9TyNpp0w96i2X6p0lPQMBnKeo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "_CeKMvrNK4L_",
         "outputId": "9d5043f3-39c6-4aa7-bf8b-5e2dfde57a8b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         },
         "outputId": "4cfe827c-0572-4c26-a8a7-7ff5723f49e6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -243,7 +243,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#  Add noise to the image\n",
+        "noise_factor = 0.05\n",
+        "img_noisy = img + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=img.shape)\n",
+        "img_noisy = np.clip(img_noisy, 0., 1.)\n",
+        "\n",
+        "#  Display the noisy image\n",
+        "plt.figure(figsize=(12, 4))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.imshow(img[0])\n",
+        "plt.title(\"Original Image\")\n",
+        "plt.axis('off')"
+      ],
       "metadata": {
         "id": "b4eVAAfxk1HW"
       },
