--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpp0w96i2X6p0lPQMBnKeo",
+      "authorship_tag": "ABX9TyMowbL6DmlQbF+W50RUqlmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,17 +244,34 @@
     {
       "cell_type": "code",
       "source": [
-        "#  Add noise to the image\n",
+        "# Add noise to the image\n",
         "noise_factor = 0.05\n",
         "img_noisy = img + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=img.shape)\n",
         "img_noisy = np.clip(img_noisy, 0., 1.)\n",
         "\n",
-        "#  Display the noisy image\n",
+        "# Display the noisy image\n",
         "plt.figure(figsize=(12, 4))\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.imshow(img[0])\n",
         "plt.title(\"Original Image\")\n",
-        "plt.axis('off')"
+        "plt.axis('off')\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.imshow(img_noisy[0])\n",
+        "plt.title(\"Noisy Image\")\n",
+        "plt.axis('off')\n",
+        "plt.show()\n",
+        "\n",
+        "# Train the model\n",
+        "epochs = 100  # More epochs for better restoration on small dataset\n",
+        "batch_size = 1\n",
+        "\n",
+        "history = autoencoder.fit(\n",
+        "    img_noisy, img,\n",
+        "    epochs=epochs,\n",
+        "    batch_size=batch_size,\n",
+        "    shuffle=True\n",
+        ")\n"
       ],
       "metadata": {
         "id": "b4eVAAfxk1HW"
