--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZqmjZhaBWy947QBxTNHye",
+      "authorship_tag": "ABX9TyMXIywEDUZlbRFNq/229qa7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "_CeKMvrNK4L_",
         "outputId": "e6610c58-1eab-4921-9a2e-6209afce3d76"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         },
         "outputId": "2ff20656-3a1e-4bce-ab82-b470d57d3c65"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
         },
         "outputId": "d0925141-56bc-4db7-e5cf-0f510fb30974"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -503,7 +503,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# ✅ Denoise the image\n",
+        "restored_img = autoencoder.predict(img_noisy)\n",
+        "\n",
+        "# ✅ Convert restored image to uint8 format for OpenCV\n",
+        "restored_img_uint8 = (restored_img[0] * 255).astype(np.uint8)"
+      ],
       "metadata": {
         "id": "ZmD2jjMq4v9p"
       },
