--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXIywEDUZlbRFNq/229qa7",
+      "authorship_tag": "ABX9TyP5naNVG7kpDubJu+qpRvD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -512,7 +512,15 @@
         "restored_img = autoencoder.predict(img_noisy)\n",
         "\n",
         "# ✅ Convert restored image to uint8 format for OpenCV\n",
-        "restored_img_uint8 = (restored_img[0] * 255).astype(np.uint8)"
+        "restored_img_uint8 = (restored_img[0] * 255).astype(np.uint8)\n",
+        "\n",
+        "# ✅ Apply sharpening filter\n",
+        "# Kernel for sharpening\n",
+        "sharpening_kernel = np.array([\n",
+        "    [-1, -1, -1],\n",
+        "    [-1,  9, -1],\n",
+        "    [-1, -1, -1]\n",
+        "])"
       ],
       "metadata": {
         "id": "ZmD2jjMq4v9p"
