--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5naNVG7kpDubJu+qpRvD5",
+      "authorship_tag": "ABX9TyNC3gdQrFeFz5mlXoC91JEX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -520,7 +520,31 @@
         "    [-1, -1, -1],\n",
         "    [-1,  9, -1],\n",
         "    [-1, -1, -1]\n",
-        "])"
+        "])\n",
+        "\n",
+        "# Apply the sharpening kernel\n",
+        "sharpened_img = cv2.filter2D(restored_img_uint8, -1, sharpening_kernel)\n",
+        "\n",
+        "# ✅ Display the results\n",
+        "plt.figure(figsize=(18, 6))\n",
+        "\n",
+        "# Original image\n",
+        "plt.subplot(1, 4, 1)\n",
+        "plt.imshow(img[0])\n",
+        "plt.title(\"Original Image\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "# Noisy image\n",
+        "plt.subplot(1, 4, 2)\n",
+        "plt.imshow(img_noisy[0])\n",
+        "plt.title(\"Noisy Image\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "# Restored image (denoised)\n",
+        "plt.subplot(1, 4, 3)\n",
+        "plt.imshow(restored_img[0])\n",
+        "plt.title(\"Denoised Image\")\n",
+        "plt.axis('off')"
       ],
       "metadata": {
         "id": "ZmD2jjMq4v9p"
