--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Ii8dIRAVG+6OZYE7UYFD",
+      "authorship_tag": "ABX9TyNf+TXEUQb5nD1r+kT7/mDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -596,6 +596,12 @@
         "plt.subplot(1, 3, 1)\n",
         "plt.imshow(img[0])\n",
         "plt.title(\"Original Image\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "# Noisy image\n",
+        "plt.subplot(1, 3, 2)\n",
+        "plt.imshow(img_noisy[0])\n",
+        "plt.title(\"Noisy Image\")\n",
         "plt.axis('off')"
       ],
       "metadata": {
