--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNf+TXEUQb5nD1r+kT7/mDX",
+      "authorship_tag": "ABX9TyOv3KRVN4Juun2LQi2W5aZz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "_CeKMvrNK4L_",
         "outputId": "9a005ccc-8970-488f-8df2-85b90655a4c3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         },
         "outputId": "aa714310-cfa8-4c18-9202-1385adc00884"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
         },
         "outputId": "0c4873b4-1272-43ff-a26b-67cec830079a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -562,7 +562,7 @@
         },
         "outputId": "1e1b9b52-86d1-4573-fc06-71b27c1ca007"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,15 @@
         "plt.subplot(1, 3, 2)\n",
         "plt.imshow(img_noisy[0])\n",
         "plt.title(\"Noisy Image\")\n",
-        "plt.axis('off')"
+        "plt.axis('off')\n",
+        "\n",
+        "# Restored image\n",
+        "plt.subplot(1, 3, 3)\n",
+        "plt.imshow(restored_img[0])\n",
+        "plt.title(\"Restored Image\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "pWuGnmJ67e5E"
