--- a/Image_restoration.ipynb
+++ b/Image_restoration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzYLal6RsvvKXIoc37qnfU",
+      "authorship_tag": "ABX9TyO3gY2zxlzE4eC1Ux11Mca9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "_CeKMvrNK4L_",
         "outputId": "5eea1928-d2df-41b6-8281-392ce6c6d2c5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         },
         "outputId": "1423e9c6-d847-4dde-e377-b3dfee85aa2b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
         },
         "outputId": "467044f1-b733-4108-8847-68996129faf0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -508,13 +508,13 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# ✅ Denoise the image\n",
+        "#  Denoise the image\n",
         "restored_img = autoencoder.predict(img_noisy)\n",
         "\n",
-        "# ✅ Convert restored image to uint8 format for OpenCV\n",
+        "#  Convert restored image to uint8 format for OpenCV\n",
         "restored_img_uint8 = (restored_img[0] * 255).astype(np.uint8)\n",
         "\n",
-        "# ✅ Apply sharpening filter\n",
+        "#  Apply sharpening filter\n",
         "# Kernel for sharpening\n",
         "sharpening_kernel = np.array([\n",
         "    [-1, -1, -1],\n",
@@ -525,7 +525,7 @@
         "# Apply the sharpening kernel\n",
         "sharpened_img = cv2.filter2D(restored_img_uint8, -1, sharpening_kernel)\n",
         "\n",
-        "# ✅ Display the results\n",
+        "#  Display the results\n",
         "plt.figure(figsize=(18, 6))\n",
         "\n",
         "# Original image\n",
@@ -562,7 +562,7 @@
         },
         "outputId": "5bf94b8b-64be-4b5d-907f-bac202558040"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,10 +586,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# ✅ Use the trained model to restore the image\n",
+        "#  Use the trained model to restore the image\n",
         "restored_img = autoencoder.predict(img_noisy)\n",
         "\n",
-        "# ✅ Display the results\n",
+        "#  Display the results\n",
         "plt.figure(figsize=(18, 6))\n",
         "\n",
         "# Original image\n",
@@ -620,7 +620,7 @@
         },
         "outputId": "c36157f2-94ca-43fe-a936-1ba88be0ab3b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "#  Step 1: Draw a black rectangle in the middle of the image\n",
+        "def add_rectangle(img, rect_size=(30, 30)):\n",
+        "    \"\"\"\n",
+        "    Add a black rectangle in the center of the image.\n",
+        "    Args:\n",
+        "    - img: Original image (NumPy array).\n",
+        "    - rect_size: (width, height) of the rectangle.\n",
+        "\n",
+        "    Returns:\n",
+        "    - img_with_rect: Image with the black rectangle.\n",
+        "    \"\"\"\n",
+        "    img_with_rect = img.copy()"
+      ],
       "metadata": {
         "id": "ffpGfQ5Z3Vu1"
       },
